updates for lore

--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ if (typeof S == "undefined") {
       "T:if you were trying to ask them personal questions... maybe dont",
       "M:Don't take it personally. They're just an asshole.",
       "E:Don't worry. They don't hold a grudge. You can always try again",
-      "K:pisssed em off XD",
+      "K:psssed em off XD",
     ],
     chatHelper: "X:You just found the biggest secret. Are you satisfied?",
     rumpleHelper: "X:Your move, little bird. Give it thrice",
@@ -941,14 +941,14 @@ if (typeof S == "undefined") {
       "Anarchy",
       "Eat the rich",
       "People, over profits",
-      "Silence is, compliance",
       "Anonymous, Vendetta",
       "This machine, kills fascists",
-      "Leeches for, Liberation",
+      "Leeches, Love You",
       "Scarcity, is a fallacy",
       "Bite the hand, that feeds on you",
       "Fuck the Oros",
       "Dare to keep, your body yours",
+      "Take back, the warren",
     ],
     currHangmanIndex: 0,
     currHangmanWord: "",
@@ -1057,7 +1057,7 @@ if (typeof S == "undefined") {
       "M:And you're being excessive. Show some restraint.",
       "X:&#128527 Aw does Ekura want some attention too?",
       "M:I'm going to kill you if you don't shut up.",
-      "X:Now, now, Eykura, you know how flustered I get when you threaten my life...",
+      "X:Now, now, Ekura, you know how flustered I get when you threaten my life...",
       "@snakebait has left the chat room",
       "X:No, wait, come back!",
       "E:I really don't know what you were expecting",
@@ -1825,7 +1825,7 @@ function updateBackground(prevPasscode, currPasscode) {
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="First" tags="" position="3029,747" size="100,100">Oh my, is that a newbie I spy? What are you doing in this corner of the internet?
 [[Am I not supposed to be here?]]
 [[I’m not even sure how I got here.]]
-[[I’m just looking for answers.]]</tw-passagedata><tw-passagedata pid="4" name="Come Back" tags="leave toHangman" position="3030,2082" size="100,100">Come back another time, little bird. You might belong here someday.</tw-passagedata><tw-passagedata pid="5" name="Leave" tags="leave toPasscode" position="3279,2071" size="100,100">You&#39;re a bore. Get out of here before I make you.</tw-passagedata><tw-passagedata pid="6" name="Welcome" tags="leave toManifesto" position="3514,2068" size="100,100">Welcome to the NightWeb, little bird.</tw-passagedata><tw-passagedata pid="7" name="Am I not supposed to be here?" tags="" position="1045,948" size="100,100">Permission is a tricky thing. It’s hard to know who has it and who doesn’t. So you tell me. Are you supposed to be here?
+[[I’m just looking for answers.]]</tw-passagedata><tw-passagedata pid="4" name="Come Back" tags="leave toHangman" position="3030,2082" size="100,100">Come back another time, little bird. You might belong here someday.</tw-passagedata><tw-passagedata pid="5" name="Leave" tags="leave toPasscode" position="3279,2071" size="100,100">You&#39;re a bore. Get out of here before I make you.</tw-passagedata><tw-passagedata pid="6" name="Welcome" tags="leave toManifesto" position="3514,2068" size="100,100">Welcome to Blackout, little bird.</tw-passagedata><tw-passagedata pid="7" name="Am I not supposed to be here?" tags="" position="1045,948" size="100,100">Permission is a tricky thing. It’s hard to know who has it and who doesn’t. So you tell me. Are you supposed to be here?
 [[Yes, I am.]]
 [[Probably not.]]
 [[Who’s to say, really?]]</tw-passagedata><tw-passagedata pid="8" name="I’m not even sure how I got here." tags="" position="3032,1051" size="100,100">How fortuitous. Bewildered wanderers are my favorite.
@@ -1961,32 +1961,29 @@ function updateBackground(prevPasscode, currPasscode) {
 		&lt;p class=&quot;hangmanFeedback&quot; id=&quot;hangmanFeedback&quot;&gt; o o o o o o &lt;/p&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="128" name="Manifesto" tags="manifesto" position="3512,2303" size="100,100">&lt;div class=&quot;fullManifestoPage&quot;&gt;
 	&lt;div&gt;&lt;button class=&#39;exitButt&#39; id=&#39;exitButton&#39;&gt;&lt;&lt;&lt;/button&gt;&lt;/div&gt;
-	&lt;h3&gt;The Warren Manifesto&lt;/h3&gt;
+	&lt;h3&gt;The Blackout Manifesto&lt;/h3&gt;
 	&lt;div class=&quot;manifestoText&quot; id=&quot;manifestoText&quot;&gt;
 		&lt;p&gt;
-		If anyone still holds the delusion that society’s rules are logical and not simply archaic remnants of wealthy landowners’ hypocritical moral compasses,
-		they would benefit from examining the concept of intrinsic value from the eyes of the universe instead of the eyes of a capitalist.
+		If anyone still holds the delusion that society’s rules are logical and not simply archaic remnants of wealthy owners’ hypocritical moral compasses,
+		they would benefit from examining the concept of value from the eyes of the universe instead of the eyes of a capitalist.
 		&lt;br&gt;&lt;br&gt;
 
-		Productivity is a fallacy fabricated by the bourgeoisie to exhaust the masses beyond the point of revolution.
+		Productivity is a fallacy fabricated by the wealthy to exhaust the masses beyond the point of resistance.
 		Service is a cruel mockery of altruism that demands the giving tree to cough up its innards to be mashed into soft green bills.
-		Money is a collective illusion that would die like a fairy if everyone stopped believing in it.
+		Money is a collective delusion that would die if everyone stopped believing in it.
 		And corporate faces will never change their tunes of profit or death without a mountain of change falling into their pockets.
 		&lt;br&gt;&lt;br&gt;
 
-		So what’s a burned out, broke, bootless, bona fide bitch to do?
+		So what’s a burnt out, broke, bootless, bona fide bitch to do?
 		&lt;br&gt;&lt;br&gt;
 
-		You start by slipping off the reachable internet,
-		free from prying corporate eyes and pressures to contribute to their twisted sense of purpose.
+		We start by slipping off the reachable web,
+		free from prying snake eyes and pressures to contribute to their twisted sense of purpose.
 		&lt;br&gt;&lt;br&gt;
 
-		Then, you share and expand and refine our wealth of knowledge between emphatically impassioned imbeciles across the web. &lt;br&gt;&lt;br&gt;
+		Then, we share, expand, and refine our wells of knowledge and resources through a network of emphatically impassioned imbeciles. &lt;br&gt;&lt;br&gt;
 
-		Finally, you strategize to deplatform, defund, and dethrone the reigning corporation.
-		&lt;br&gt;&lt;br&gt;
-
-		So that&#39;s what we did, and soon, we will collectively overhaul all hierarchy and worth-politics.
+		Finally, we strategize to deplatform, defund, and dethrone the reigning Oros to collectively overhaul all hierarchy and worth-politics.
 		&lt;br&gt;&lt;br&gt;
 
 		There are those who attack, those who defend, those who provide,
@@ -1996,7 +1993,7 @@ function updateBackground(prevPasscode, currPasscode) {
 		All are welcome and all are resolute.
 		&lt;br&gt;&lt;br&gt;
 
-		The Warren lies in wait...
+		Blackout lies in wait...
 		&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="129" name="Passcode" tags="passcode" position="3100,619" size="100,100">&lt;div class=&quot;helper&quot; id=&quot;helper&quot;&gt;
