--- a/index.html
+++ b/index.html
@@ -695,13 +695,16 @@ function parsePassage(passName) {
 }
 
 function showJMessage() {
-  if (document.getElementById("responses")) {
-    document.getElementById("responses").style.display = "none";
-  }
-  document.getElementById("messageText").innerHTML = "";
   S.displayFullMessage = false;
   S.currMessage = "";
   clearTimeout(S.waiting);
+
+  if (document.getElementById("responses")) {
+    document.getElementById("responses").style.display = "none";
+  }
+  if (document.getElementById("messageText")) {
+    document.getElementById("messageText").innerHTML = "";
+  }
 
   var content = parsePassage(S.currPassage);
   if (S.responseListeners.length > 0) {
@@ -744,6 +747,7 @@ function typeText(message, i, responses) {
     if (document.getElementById("messageText")) {
       document.getElementById("messageText").innerHTML = S.currMessage;
     }
+
     if (punc == "." || punc == "?" || punc == "!") {
       var nextCharIsPunc = false;
       if (i < message.length) {
@@ -844,9 +848,10 @@ function fadeInResponse(j) {
 
 function clickOption(i) {
   var el = document.getElementById("responses").children[i];
+  el.removeEventListener("click", clickOption, true);
   el.style.pointerEvents = "none";
   S.currPassage = el.innerHTML;
-  el.removeEventListener("click", clickOption, true);
+
   S.waiting = setTimeout(showJMessage, 10);
 }
 /* twine-user-script #3: "general_func.js" */
