--- a/index.html
+++ b/index.html
@@ -878,9 +878,9 @@ if (typeof S == "undefined") {
     ],
     leaveHelper: [
       "T:if you were trying to ask them personal questions... maybe dont",
-      "M:Don't take it personally. They're just an asshole.",
       "E:Don't worry. They don't hold a grudge. You can always try again",
       "K:psssed em off XD",
+      "M:Don't take it personally. They're just an asshole.",
     ],
     chatHelper: "X:You just found the biggest secret. Are you satisfied?",
     rumpleHelper: "X:Your move, little bird. Give it thrice",
@@ -1884,7 +1884,7 @@ function updateBackground(prevPasscode, currPasscode) {
 [[That sounds like the dream.]]</tw-passagedata><tw-passagedata pid="33" name="What have I stumbled upon?" tags="" position="2610,1379" size="100,100">Just an idea. An idea most people are unwilling to accept.
 [[Why wouldn’t people accept it?]]
 [[I’m willing.]]
-[[You don’t like most people, do you?]]</tw-passagedata><tw-passagedata pid="34" name="Are you a bewildered wanderer?" tags="" position="2927,1363" size="100,100">Are you a bewildered wanderer?
+[[You don’t like most people, do you?]]</tw-passagedata><tw-passagedata pid="34" name="Are you a bewildered wanderer?" tags="" position="2927,1363" size="100,100">Might be.... Though I tend to like bewildering more than being bewildered. That&#39;s why I keep so many secrets.
 [[What are your best secrets?]]
 [[Aren’t secrets dangerous?]]
 [[Being bewildered is fun. You should try it sometime.]]</tw-passagedata><tw-passagedata pid="35" name="Am I supposed to be scared?" tags="noexit toComeback" position="2139,1522" size="100,100">That is entirely up to you.</tw-passagedata><tw-passagedata pid="36" name="You don’t seem dangerous to me." tags="noexit toComeback" position="2256,1518" size="100,100">Then I’m not doing my job right.</tw-passagedata><tw-passagedata pid="37" name="That sounds like the dream." tags="noexit toWelcome" position="2372,1519" size="100,100">Oh, trust me, it is.</tw-passagedata><tw-passagedata pid="38" name="There are no wrong questions." tags="" position="2673,1664" size="100,100">Please. You’re surrounded by wrong questions.
